[package]
name = "tun"
version = "0.5.5"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "TUN device creation and handling."
repository = "https://github.com/meh/rust-tun"
keywords = ["tun", "network", "tunnel", "bindings"]

[dependencies]
libc = "0.2"
thiserror = "1"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
ioctl = { version = "0.6", package = "ioctl-sys" }

[dev-dependencies]
futures = "0.3.0"
async-std = { version = "1", features = ["attributes"] }

[[example]]
name = "read"